fix: restore allow list and add forecast
